# azure-ai-evaluation-kickstarter

./: README.md  README.old  azure.yaml  pyproject.toml
infra/: main.bicep  main.parameters.json
infra/modules/ai/: hub.bicep
scripts/: oauth2PermissionScopes.json
src/ai-evaluation/: Dockerfile  app.py  pyproject.toml
src/ai-evaluation/data/: reviewer_questions_with_context.jsonl
src/ai-evaluation/evalagents/: chat_completion_agent.py
src/ai-evaluation/templates/: tool_call.j2  tool_definitions.j2
src/ai-evaluation/utils/: evaluation.py  models.py  util.py
src/backend/: Dockerfile  pyproject.toml
src/frontend/: Dockerfile  app.py  pyproject.toml
