[project]
name = "ai-evaluation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-evaluation[redteam]>=1.3.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
    "openai>=1.61.0",
    "semantic-kernel>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation>=0.50b0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b33",
    "azure-identity>=1.19.0",
    "azure-ai-inference[opentelemetry]>=1.0.0b7",
    "azure-ai-projects>=1.0.0b8",
    "azure-ai-ml>=1.26.1",
    "opentelemetry-sdk>=1.31.1",
    "openai-agents>=0.0.11",
]
